--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <input type="text" placeholder="Search for a city..." spellcheck="false">
             <button type="button"><img src="./images/search.png"  alt=".."></button>
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="./images/rain.png" alt=".." class="weather-icon">
             <h1 class="temp">22°C</h1>
